--- a/src/css/admin.css
+++ b/src/css/admin.css
@@ -79,6 +79,20 @@
   margin-bottom:20px;
 }
 
+.calendar-outter-container {
+  min-height:100vh;
+  width:100%;
+  margin:auto;
+  display:flex;
+}
+
+.calendar-inner-container {
+  display:flex;
+  flex-direction:column;
+  flex:1;
+  min-height:0;
+}
+
 .client-top-navigation {
   box-shadow:0 1px 6px 0 rgba(0,0,0,0.12), 0 1px 6px 0 rgba(0,0,0,0.12);
   height:50px;
